The card adjustment was made and the scroll bar was modified

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*odificando scroll*/
+html::-webkit-scrollbar{
+    -webkit-appearance: none;
+    width: 5px;
+    
+}
+/*fondo srcoll*/
+html::-webkit-scrollbar-track{
+    background-color: #111827;
+}
+/*up scroll*/
+html::-webkit-scrollbar-thumb{
+    background-color: #555A88;
+    border-radius: 1rem;
+}
